search icon mobile fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -93,15 +93,16 @@ p.center{
   background-color: #ffffff;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16);
   max-width: 500px;
-  top:25%;
-  font-size: 22px;
+  top:18%;
+  font-size: 18px;
 }
 input{
   border: none;
   height: 40px;
   max-width: 450px;
   outline: none;
-  font-size: 22px;
+  font-size: 18px;
+  margin:5px;
 
 }
 #searchicon{
@@ -299,6 +300,11 @@ div.grid-item {
   p.center{
     padding: 5px;
   }
+
+  #search{
+    top:5%;
+  }
+
   .grid-container {
     grid-template-columns:  auto auto auto auto;
     max-width: 300px;
@@ -337,7 +343,7 @@ div.grid-item {
  #primeimg1{
    float: left;
    position: relative;
-   top: 23%;
+   top: 25%;
  }
   #primeimg2{
     float: left;
